log
ju., 21 de abr. de 2022 11:27:48: 
 tests:  1|8
total_score: 0/70
678f076
ju., 21 de abr. de 2022 11:32:07: 
 treemap.c | 11 +++++++++++
 1 file changed, 11 insertions(+)
 tests:  8|7
total_score: 10/70
c8dc5d1
ju., 21 de abr. de 2022 11:55:26: 
 treemap.c | 19 ++++++++++++++++++-
 1 file changed, 18 insertions(+), 1 deletion(-)
 tests:  8|7
total_score: 10/70
a1f3fc1
ju., 21 de abr. de 2022 12:04:17: 
 treemap.c | 16 ++++++----------
 1 file changed, 6 insertions(+), 10 deletions(-)
 tests:  9|7
total_score: 10/70
4d28790
ju., 21 de abr. de 2022 12:05:00: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  9|7
total_score: 10/70
200a883
ju., 21 de abr. de 2022 12:06:51: 
 treemap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  10|6
total_score: 20/70
ccec9f7
ju., 21 de abr. de 2022 12:12:11: 
 treemap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  0|0
1d30715
ju., 21 de abr. de 2022 12:12:56: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  10|6
total_score: 20/70
97c3846
ju., 21 de abr. de 2022 12:13:24: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
24f770a
ju., 21 de abr. de 2022 12:14:36: 
 treemap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:4:0:
treemap.c: In function 'minimum':
treemap.c:73:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
06f6b4e
ju., 21 de abr. de 2022 12:15:17: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
treemap.c: In function 'minimum':
treemap.c:73:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
f9b39f4
